--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   shelf_web_socket: ^0.2.3
   web_socket_channel: ^1.1.0
   crypt: ^3.0.1
+  random_string: ^2.1.0
 
 dev_dependencies:
   build_runner: ^1.10.0
