--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   web_socket_channel: ^1.1.0
   crypt: ^3.0.1
   random_string: ^2.1.0
+  path: ^1.7.0
 
 dev_dependencies:
   build_runner: ^1.10.0
