--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   crypt: ^3.0.1
   random_string: ^2.1.0
   path: ^1.7.0
+  meta: ^1.3.0
 
 dev_dependencies:
   build_runner: ^1.10.0
