--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   random_string: ^2.1.0
   path: ^1.7.0
   meta: ^1.3.0
+  mailer: 3.0.0
 
 dev_dependencies:
   build_runner: ^1.10.0
