--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   path: ^1.7.0
   meta: ^1.3.0
   mailer: 3.0.0
+  web_whiteboard:
+    git: https://github.com/doodlezucc/web_whiteboard.git
 
 dev_dependencies:
   build_runner: ^1.10.0
