--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   mailer: 3.0.0
   web_whiteboard:
     git: https://github.com/doodlezucc/web_whiteboard.git
+  async: ^2.7.0
 
 dev_dependencies:
   build_runner: ^1.10.0
