--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   shelf: ^0.7.5
   shelf_web_socket: ^0.2.3
   web_socket_channel: ^1.1.0
-  crypt: ^3.0.1
+  crypt: ^4.0.1
   random_string: ^2.1.0
   path: ^1.7.0
   meta: ^1.3.0
@@ -19,6 +19,7 @@ dependencies:
   web_whiteboard:
     git: https://github.com/doodlezucc/web_whiteboard.git
   async: ^2.7.0
+  archive: ^3.1.2
 
 dev_dependencies:
   build_runner: ^1.10.0
