--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   random_string: ^2.1.0
   path: ^1.7.0
   meta: ^1.3.0
-  mailer: 3.0.0
+  mailer: ^3.0.0
   web_whiteboard:
     git: https://github.com/doodlezucc/web_whiteboard.git
   async: ^2.7.0
