--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,23 +7,24 @@ environment:
   sdk: '>=2.10.0 <3.0.0'
 
 dependencies:
-  args: ^1.6.0
-  shelf: ^0.7.5
-  shelf_web_socket: ^0.2.3
-  web_socket_channel: ^1.1.0
+  archive: ^3.1.6
+  args: ^2.3.0
+  async: ^2.8.2
   crypt: ^4.0.1
-  random_string: ^2.1.0
-  path: ^1.7.0
+  mailer: ^5.0.2
   meta: ^1.3.0
-  mailer: ^3.0.0
+  path: ^1.7.0
+  random_string: ^2.1.0
+  shelf: ^1.2.0
+  shelf_web_socket: ^1.0.1
+  web_socket_channel: ^2.1.0
   web_whiteboard:
     git: https://github.com/doodlezucc/web_whiteboard.git
   web_polymask:
     git: https://github.com/doodlezucc/web_polymask.git
-  async: ^2.7.0
-  archive: ^3.1.2
+  ambience:
+    git: https://github.com/doodlezucc/ambience.git
 
 dev_dependencies:
-  build_runner: ^1.10.0
-  build_web_compilers: ^2.11.0
-  pedantic: ^1.9.0
+  build_runner: ^2.1.4
+  build_web_compilers: ^3.2.1
