--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,11 @@ dependencies:
   args: ^2.3.0
   async: ^2.8.2
   crypt: ^4.0.1
+  googleapis_auth: ^1.3.0
   mailer: ^5.0.2
   meta: ^1.3.0
   path: ^1.7.0
+  prompts: ^2.0.0
   random_string: ^2.1.0
   shelf: ^1.2.0
   shelf_web_socket: ^1.0.1
