--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   async: ^2.8.2
   crypt: ^4.0.1
   googleapis_auth: ^1.3.0
+  image: ^3.0.8
+  intl: ^0.17.0
   mailer: ^5.0.2
   meta: ^1.3.0
   path: ^1.7.0
@@ -20,13 +22,12 @@ dependencies:
   shelf: ^1.2.0
   shelf_web_socket: ^1.0.1
   web_socket_channel: ^2.1.0
-  web_whiteboard:
-    git: https://github.com/doodlezucc/web_whiteboard.git
-  web_polymask:
-    git: https://github.com/doodlezucc/web_polymask.git
   ambience:
     git: https://github.com/doodlezucc/ambience.git
-  image: ^3.0.8
+  web_polymask:
+    git: https://github.com/doodlezucc/web_polymask.git
+  web_whiteboard:
+    git: https://github.com/doodlezucc/web_whiteboard.git
 
 dev_dependencies:
   build_runner: ^2.1.4
