--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: dnd_interactive
-description: A web server built using the shelf package.
+description: An online platform to gather and play tabletop RPGs.
 # version: 1.0.0
-# homepage: https://www.example.com
+homepage: https://theoretically.online/dnd
 
 environment:
   sdk: '>=2.10.0 <3.0.0'
