--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: dnd_interactive
+name: dungeonclub
 description: An online platform to gather and play tabletop RPGs.
 homepage: https://theoretically.online/dnd
 
