--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: dungeonclub
 description: An online platform to gather and play tabletop RPGs.
-homepage: https://theoretically.online/dnd
+homepage: https://dungeonclub.net
 
 environment:
   sdk: ">=2.10.0 <3.0.0"
