--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,8 @@ dependencies:
   crypt: ^4.0.1
   googleapis_auth: ^1.3.0
   graceful: ^1.1.0
-  grid:
-    git: https://github.com/doodlezucc/dart_grid.git
+  grid_space:
+    git: https://github.com/doodlezucc/dart_grid_space.git
   image: ^3.0.8
   intl: ^0.17.0
   mailer: ^5.0.2
