--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: An online platform to gather and play tabletop RPGs.
 homepage: https://dungeonclub.net
 
 environment:
-  sdk: ">=2.10.0 <3.0.0"
+  sdk: ">=2.15.0 <4.0.0"
 
 dependencies:
   archive: ^3.1.6
@@ -14,9 +14,9 @@ dependencies:
   graceful: ^1.1.0
   grid_space:
     git: https://github.com/doodlezucc/dart_grid_space.git
-  image: ^3.0.8
-  intl: ^0.17.0
-  mailer: ^5.0.2
+  image: ^4.0.17
+  intl: ^0.18.1
+  mailer: ^6.0.1
   meta: ^1.3.0
   path: ^1.7.0
   prompts: ^2.0.0
@@ -27,11 +27,13 @@ dependencies:
   ambience:
     git: https://github.com/doodlezucc/ambience.git
   web_polymask:
-    git: https://github.com/doodlezucc/web_polymask.git
+    git:
+      url: https://github.com/doodlezucc/web_polymask.git
+      ref: dart-3.0
   web_whiteboard:
     git: https://github.com/doodlezucc/web_whiteboard.git
 
 dev_dependencies:
   build_runner: ^2.1.4
-  build_web_compilers: ^3.2.1
+  build_web_compilers: ^4.0.5
   test: ^1.22.0
