--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   graceful: ^1.1.0
   grid_space:
     git: https://github.com/doodlezucc/dart_grid_space.git
+  http: ^0.13.6
   image: ^4.0.17
   intl: ^0.18.1
   mailer: ^6.0.1
