--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   path: ^1.7.0
   prompts: ^2.0.0
   random_string: ^2.1.0
+  sass: ^1.64.1
   shelf: ^1.2.0
   shelf_web_socket: ^1.0.1
   web_socket_channel: ^2.1.0
