--- a/.github/workflows/deploy-images.yaml
+++ b/.github/workflows/deploy-images.yaml
@@ -2,7 +2,7 @@ name: Build Docker
 
 on:
   push:
-    branches: [master]
+    branches: [master, Docker*]
     tags:
       - "v*"
   #Allows you to run this workflow manually from the Actions tab
