Fix Volume Mount

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,10 @@
 version: "2.1"
 services:
   dungeonclub:
-    image: dungeonclub:latest
+    image: ghcr.io/doodlezucc/dungeonclub:latest
     container_name: dungeonclub
     volumes:
-      - ./DCV/ambience:/app/ambience
-      - ./DCV/database:/app/database
-      - ./DCV/database_backup:/app/database_backup
-      - ./DCV/logs:/app/logs
-      - ./DCV/mail:/app/mail
-      - ./DCV/web:/app/web
-    # environment:
-    #   - PUID=1000
-    #   - PGID=1000
-    #   - TZ=Europe/London
+      - ./DungeonClub_Data:/app
     ports:
       - 7070:7070
     restart: unless-stopped
