--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
 version: "2.1"
 services:
   dungeonclub:
-    image: ghcr.io/doodlezucc/dungeonclub:latest
+    image: dungeonclub:latest
     container_name: dungeonclub
+    environment:
+      - ENABLE_MUSIC_PLAYER=true
     volumes:
       - ./DungeonClub_Data:/app
     ports:
-      - 7070:7070
+      - 7072:7070
     restart: unless-stopped
