--- a/.github/workflows/deploy-images.yaml
+++ b/.github/workflows/deploy-images.yaml
@@ -17,15 +17,28 @@ jobs:
       packages: write
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set environment
         run: |
+          VERSION="$(cat .VERSION)"
+          MAJORVERSION="$(cat .VERSION | cut -c 1-2 | sed -r 's#^(.{0})#\1latest-#')"
+          DATI="$(date --rfc-3339=seconds | sed 's/ /T/')"
           export TAG="${GITHUB_REF#'refs/tags/'}"
           echo "GH_TAG=$TAG" >> $GITHUB_ENV
           echo "COMMIT=$(git rev-parse HEAD)" >> $GITHUB_ENV
           echo "COMMIT_SHORT=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
           echo "DOCKER_REPO=ghcr.io/$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          echo "DATI=$DATI" >> $GITHUB_ENV"
+          
+          # Set values in iobroker_startup.sh
+          sed -e "s/\${VERSION}/$VERSION/" -e "s/\${BUILD}/$DATI/" ./scripts/entrypoint.sh > ./scripts/entrypoint.tmp
+          mv -f ./scripts/entrypoint.tmp ./scripts/entrypoint.sh
+
+          # Set values in Dockerfile
+          sed -e "s/\${VERSION}/$VERSION/" -e "s/\${DATI}/$DATI/" ./Dockerfile > ./Dockerfile.tmp 
+          mv -f ./Dockerfile.tmp ./Dockerfile
 
       - name: Set up QEMU
         id: qemu
