--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
 		"vite": "^5.0.3",
 		"vitest": "^1.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"mongoose": "^8.4.3"
+	}
 }
