--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"mongoose": "^8.4.3"
+		"@types/ws": "^8.5.10",
+		"mongoose": "^8.4.3",
+		"ws": "^8.17.1"
 	}
 }
