--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@fortawesome/fontawesome-svg-core": "^6.5.2",
+		"@fortawesome/free-brands-svg-icons": "^6.5.2",
+		"@fortawesome/free-solid-svg-icons": "^6.5.2",
+		"@fortawesome/svelte-fontawesome": "^0.2.2",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
@@ -26,6 +30,7 @@
 		"sass": "^1.77.6",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"svelte-time": "^0.9.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0-alpha.20",
@@ -36,7 +41,6 @@
 	"dependencies": {
 		"@types/ws": "^8.5.10",
 		"mongoose": "^8.4.3",
-		"svelte-time": "^0.9.0",
 		"ws": "^8.17.1"
 	}
 }
