--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"globals": "^15.0.0",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
+		"prisma": "^5.16.1",
 		"sass": "^1.77.6",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
@@ -39,8 +40,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@prisma/client": "^5.16.1",
 		"@types/ws": "^8.5.10",
-		"mongoose": "^8.4.3",
 		"ws": "^8.17.1"
 	}
 }
