--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"test": "vitest",
 		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"generate": "prisma generate",
+		"hardsync": "prisma db push",
+		"postinstall": "npm run generate"
 	},
 	"devDependencies": {
 		"@fortawesome/fontawesome-svg-core": "^6.5.2",
