--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.7",
 		"@types/node": "^20.14.9",
+		"@types/ws": "8.5.5",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -45,7 +46,6 @@
 	"type": "module",
 	"dependencies": {
 		"@prisma/client": "^5.16.1",
-		"@types/ws": "^8.5.10",
-		"ws": "^8.17.1"
+		"ws": "^8.13.0"
 	}
 }
