--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"format": "prettier --write .",
 		"generate": "prisma generate",
 		"hardsync": "prisma db push",
-		"preinstall": "cd packages/svelte-ws-server && npm run build",
+		"preinstall": "cd packages/svelte-ws-server && npm run build && cd ../component-library && npm run package",
 		"postinstall": "npm run generate"
 	},
 	"devDependencies": {
@@ -47,6 +47,7 @@
 	"type": "module",
 	"dependencies": {
 		"@prisma/client": "^5.16.1",
+		"components": "file:packages/component-library",
 		"svelte-ws-server": "file:packages/svelte-ws-server",
 		"ws": "^8.13.0"
 	}
