move error dialog out of component library

--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -25,6 +25,10 @@
 		"./compounds": {
 			"types": "./dist/compounds.d.ts",
 			"svelte": "./dist/compounds.js"
+		},
+		"./modal": {
+			"types": "./dist/modal/index.d.ts",
+			"svelte": "./dist/modal/index.js"
 		}
 	},
 	"files": [
