--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.7",
+		"@types/mime-types": "^2.1.4",
 		"@types/node": "^20.14.9",
 		"@types/ws": "8.5.5",
 		"eslint": "^9.0.0",
@@ -46,6 +47,7 @@
 	"type": "module",
 	"dependencies": {
 		"@prisma/client": "^5.16.1",
+		"mime-types": "^2.1.35",
 		"ws": "^8.13.0"
 	}
 }
