--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 	"dependencies": {
 		"@prisma/client": "^5.16.1",
 		"mime-types": "^2.1.35",
+		"normalize-email": "1.1.1",
 		"ws": "^8.13.0"
 	}
 }
