--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@types/eslint": "^8.56.7",
 		"@types/mime-types": "^2.1.4",
 		"@types/node": "^20.14.9",
+		"@types/nodemailer": "^6.4.15",
 		"@types/ws": "8.5.5",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
@@ -48,6 +49,7 @@
 	"dependencies": {
 		"@prisma/client": "^5.16.2",
 		"mime-types": "^2.1.35",
+		"nodemailer": "^6.9.14",
 		"normalize-email": "1.1.1",
 		"ws": "^8.13.0"
 	}
