--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.7",
 		"@types/mime-types": "^2.1.4",
+		"@types/mjml": "^4.7.4",
 		"@types/node": "^20.14.9",
 		"@types/nodemailer": "^6.4.15",
 		"@types/ws": "8.5.5",
@@ -49,6 +50,7 @@
 	"dependencies": {
 		"@prisma/client": "^5.16.2",
 		"mime-types": "^2.1.35",
+		"mjml": "^5.0.0-alpha.4",
 		"nodemailer": "^6.9.14",
 		"normalize-email": "1.1.1",
 		"ws": "^8.13.0"
