use $env/dynamic for optional environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,26 @@
-DATABASE_URL="postgresql://user:password@host:port/dbname"
+DATABASE_URL="postgres://postgres:postgres@localhost:5432/dungeonclub"
 
-# Mail Service, options are gmail and smtp
-MAIL_SERVICE=smtp
+MAIL_SERVICE_SENDER_NAME="Dungeon Club"
+MAIL_SERVICE_SENDER_EMAIL="noreply@dungeonclub.com"
 
-# SMTP Configuration
-SMTP_HOST=smtp.example.com
-SMTP_PORT=587
-SMTP_SECURE=false
-SMTP_USER=your_username@example.com
-SMTP_PASS=your_strong_password_here
 
-# Sender Information
-SMTP_FROM_NAME="Dungeon Club"
-SMTP_FROM_EMAIL=noreply@dungeonclub.com
+# GMAIL CONFIGURATION
+# Uncomment and fill in the following lines to enable Gmail for email transport.
+# See https://console.cloud.google.com/flows/enableapi?apiid=gmail.googleapis.com
+#
+# MAIL_SERVICE="gmail"
+# GMAIL_API_USER="your_username@gmail.com"
+# GMAIL_API_CLIENT_ID=""
+# GMAIL_API_CLIENT_SECRET=""
+# GMAIL_API_REFRESH_TOKEN=""
+
+
+# SMTP CONFIGURATION
+# Uncomment and fill in the following lines to enable SMTP for email transport.
+#
+# MAIL_SERVICE="smtp"
+# SMTP_HOST="smtp.example.com"
+# SMTP_PORT=587
+# SMTP_SECURE=false
+# SMTP_USER="your_username@example.com"
+# SMTP_PASS="your_strong_password_here"
