--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"format": "prettier --write .",
 		"generate": "prisma generate",
 		"hardsync": "prisma db push",
-		"postinstall": "npm run generate"
+		"postinstall": "pnpm generate"
 	},
 	"devDependencies": {
 		"@fortawesome/fontawesome-svg-core": "^6.5.2",
@@ -56,5 +56,16 @@
 		"nodemailer": "^6.9.14",
 		"normalize-email": "1.1.1",
 		"ws": "^8.13.0"
+	},
+	"packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977",
+	"pnpm": {
+		"onlyBuiltDependencies": [
+			"@parcel/watcher",
+			"@prisma/client",
+			"@prisma/engines",
+			"esbuild",
+			"prisma",
+			"svelte-preprocess"
+		]
 	}
 }
