Move all dependencies to devDependencies

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"@fortawesome/free-brands-svg-icons": "^6.7.2",
 		"@fortawesome/free-solid-svg-icons": "^6.7.2",
 		"@fortawesome/svelte-fontawesome": "^0.2.3",
+		"@prisma/client": "^5.22.0",
 		"@sveltejs/adapter-auto": "^6.0.1",
 		"@sveltejs/kit": "^2.21.2",
 		"@sveltejs/vite-plugin-svelte": "^5.1.0",
@@ -42,6 +43,11 @@
 		"eslint-plugin-svelte": "^3.9.1",
 		"globals": "^16.2.0",
 		"jsdom": "^26.1.0",
+		"lodash": "^4.17.21",
+		"mime-types": "^2.1.35",
+		"mjml": "5.0.0-alpha.6",
+		"nodemailer": "^6.10.1",
+		"normalize-email": "1.1.1",
 		"prettier": "^3.5.3",
 		"prettier-plugin-svelte": "^3.4.0",
 		"prisma": "^5.22.0",
@@ -53,15 +59,7 @@
 		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.33.1",
 		"vite": "^6.3.5",
-		"vitest": "^3.2.2"
-	},
-	"dependencies": {
-		"@prisma/client": "^5.22.0",
-		"lodash": "^4.17.21",
-		"mime-types": "^2.1.35",
-		"mjml": "5.0.0-alpha.6",
-		"nodemailer": "^6.10.1",
-		"normalize-email": "1.1.1",
+		"vitest": "^3.2.2",
 		"ws": "^8.18.2"
 	},
 	"packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977",
