Upgrade major versions of most dependencies

--- a/package.json
+++ b/package.json
@@ -33,20 +33,20 @@
 		"@testing-library/svelte": "^5.2.8",
 		"@types/eslint": "^9.6.1",
 		"@types/lodash": "^4.17.17",
-		"@types/mime-types": "^2.1.4",
+		"@types/mime-types": "^3.0.0",
 		"@types/mjml": "^4.7.4",
-		"@types/node": "^20.17.58",
+		"@types/node": "^22.15.30",
 		"@types/nodemailer": "^6.4.17",
-		"@types/ws": "8.5.5",
+		"@types/ws": "^8.18.1",
 		"eslint": "^9.28.0",
 		"eslint-config-prettier": "^10.1.5",
 		"eslint-plugin-svelte": "^3.9.1",
 		"globals": "^16.2.0",
 		"jsdom": "^26.1.0",
 		"lodash": "^4.17.21",
-		"mime-types": "^2.1.35",
+		"mime-types": "^3.0.0",
 		"mjml": "5.0.0-alpha.6",
-		"nodemailer": "^6.10.1",
+		"nodemailer": "^7.0.3",
 		"normalize-email": "1.1.1",
 		"prettier": "^3.5.3",
 		"prettier-plugin-svelte": "^3.4.0",
@@ -60,7 +60,7 @@
 		"typescript-eslint": "^8.33.1",
 		"vite": "^6.3.5",
 		"vitest": "^3.2.2",
-		"ws": "^8.18.2"
+		"ws": "^8.18.1"
 	},
 	"packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977",
 	"pnpm": {
