Use full postgres connection string

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgres://postgres:postgres@localhost:5432/dungeonclub"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/dungeonclub?schema=public"
 
 MAIL_SERVICE_SENDER_NAME="Dungeon Club"
 MAIL_SERVICE_SENDER_EMAIL="noreply@dungeonclub.com"
