--- a/.github/workflows/cross-build.yaml
+++ b/.github/workflows/cross-build.yaml
@@ -14,6 +14,9 @@ jobs:
           - runs-on: windows-latest
             artifact: windows
             binary-name: server.exe
+          - runs-on: ubuntu-24.04-arm
+            artifact: linux_arm64
+            binary-name: server
     runs-on: ${{ matrix.runs-on }}
     steps:
       - uses: actions/checkout@v3
@@ -72,6 +75,7 @@ jobs:
 
       - run: rm build/server
       - run: cp -r build/. build_macos
+      - run: cp -r build/. build_linux_arm
 
       - name: Download Windows server
         uses: actions/download-artifact@v3
@@ -93,6 +97,17 @@ jobs:
       - name: Compress MacOS build
         run: cd build_macos; zip -r ../dungeonclub-macos.zip *; cd ..
 
+      - name: Download Linux (ARM64) server
+        uses: actions/download-artifact@v3
+        with:
+          name: server_linux_arm64
+          path: build_linux_arm
+
+      - run: chmod +x build_linux_arm/server
+
+      - name: Compress Linux (ARM64) build
+        run: cd build_linux_arm; zip -r ../dungeonclub-linux-arm.zip *; cd ..
+
       - run: mv build.tgz dungeonclub-linux.tgz
 
       - name: Create Release
@@ -103,3 +118,4 @@ jobs:
             dungeonclub-windows.zip
             dungeonclub-macos.zip
             dungeonclub-linux.tgz
+            dungeonclub-linux-arm.tgz
