Use .zip extension for arm64 artifact

--- a/.github/workflows/cross-build.yaml
+++ b/.github/workflows/cross-build.yaml
@@ -118,4 +118,4 @@ jobs:
             dungeonclub-windows.zip
             dungeonclub-macos.zip
             dungeonclub-linux.tgz
-            dungeonclub-linux-arm.tgz
+            dungeonclub-linux-arm.zip
